--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     </nav>
   </div>
 </header>
-
+<main>
     <form id="login-form">
     <h2>Login</h2>
     <label for="usuario">Usuário</label>
@@ -55,7 +55,7 @@
 <footer>
     <a href="index.html";">Retornar a página inicial</a>  
     </footer>
-
+</main>
 </footer>
   <script> src="script.js"</script>
 </body>
