Atualizando algumas questões visuais

--- a/registros.html
+++ b/registros.html
@@ -19,6 +19,9 @@
       <a href="index.html">Página Inicial</a>
       <a href="cadastro.html">Cadastros</a>
       <a href="registros.html">Registros</a>
+      <a id="logoserra" href="index.html">
+      <img src="/LOGO SERRA MORENA (2).jpg" alt="LOGO" link="index.html" class="logo">
+      </a>
     </nav>
   </div>
 </header>
