--- a/cadastro.html
+++ b/cadastro.html
@@ -39,6 +39,9 @@
       <a href="index.html">Página Inicial</a>
       <a href="cadastro.html">Cadastros</a>
       <a href="registros.html">Registros</a>
+      <a id="logoserra" href="index.html">
+      <img src="/LOGO SERRA MORENA (2).jpg" alt="LOGO" link="index.html" class="logo">
+      </a>
       <button id="logout" class="logout-btn" >Sair</button>
     </nav>
   </div>
