Atualizando logo em gif

--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
       <a href="cadastro.html">Cadastros</a>
       <a href="registros.html">Registros</a>
       <a id="logoserra" href="index.html">
-      <img src="/LOGO SERRA MORENA (2).jpg" alt="LOGO" link="index.html" class="logo">
+      <img src="/serra_morena sem fundo cópia.gif" alt="LOGO" link="index.html" class="logo">
       </a>
     </nav>
   </div>
