Alguns ajustes de visual

--- a/cadastro.html
+++ b/cadastro.html
@@ -30,10 +30,7 @@
   <div class="header-content">
     <div class="header-title">
       <h1>Controle de Chaves</h1>
-      <p>Bem-vindo ao sistema de controle de chaves</p>
-
     </div>
-
 
     <nav>
       <a href="index.html">Página Inicial</a>
@@ -51,7 +48,7 @@
 
   <!-- Cadastro de Setores -->
   <section>
-    <h2>Cadastrar Setor</h2>
+    <h2 class="titulo-cadastro">Cadastrar Setor</h2>
     <form id="form-setor">
       <label for="novo-setor">Nome do Setor:</label>
       <input type="text" id="novo-setor" name="novo-setor" required />
